need to fix dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,31 @@
 .backgroundWhite {
   background-color: #fff;
 }
+.backgroundBlack {
+  background-color: #161616;
+}
 .icon {
   transition: 0.3s all;
 }
 .icon:hover {
   height: 65px;
 }
+.icon-project {
+  margin-top: 0.3em;
+  width: 35px;
+  height: 35px;
+}
+
 .mode-tog {
   transition: all 3s;
 }
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .containerDarkMode {
   position: absolute;
   display: flex;
@@ -51,5 +67,25 @@
   }
   .specialWordWhite::before {
     top: 8%;
+  }
+  .content {
+    margin: 2em 0.2em 0 0.2em;
+  }
+}
+@media screen and (max-width: 300px) {
+  .allContactLinks {
+    flex-wrap: wrap;
+  }
+  .content {
+    font-size: 40px;
+    margin: 0;
+    margin-top: 50px;
+    height: 100vh;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .content {
+    margin-top: 3em;
   }
 }
