--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@ html,
 body {
   transition: all 0.5s;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 :root {
   --color--gradientOP: linear-gradient(to right, #ffa200 0%, #ff0de7 100%);
   transition: all 1s;
